# Parsing

./: .gitignore  README.md  beautysoup.py  docker-compose.yaml  mongog.py  offers.json  pyproject.toml  task_1.py  task_2.py  task_3.py
